<resources>
    <string name="app_name" translatable="false">LearningDroid</string>
    <string name="move_activity">Move Activity</string>
    <string name="move_with_data">Move Activity with Data</string>
    <string name="move_with_object">Move Activity with Object</string>
    <string name="dial_number">Dial the Number!</string>
    <string name="move_with_result">Move Activity for Result</string>
    <string name="result_from_activity">Result from Activity</string>
    <string name="choose_number">Choose a number you like</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Choose</string>
    <string name="data_received">Data Received</string>
    <string name="object_received">Object Received</string>
    <string name="this_is_moveactivity">This is MoveActivity</string>
    <string name="kotlinParcelizeTXT">Move with Kotlin Parcelize</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\nFHD AMOLED at 441ppi\n2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\nStandby time (LTE): up to 19 days\nTalk time (3g/WCDMA): up to 26 hours\nInternet use time (Wi-Fi): up to 13 hours\nInternet use time (LTE): up to 13 hours\nVideo playback: up to 13 hours\nAudio playback (via headset): up to 110 hours\nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="title">Google Pixel</string>
    <string name="specification">Specification</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Seller</string>
    <string name="my_name">Willy James</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$7350</string>
    <string name="dummy_photos">6 photos</string>
    <string name="nothing">Lorem Ipsum</string>
    <string name="learning_droid" translatable="false">Learning\nDroid</string>
    <string name="NumberHint">(+62) 0821..</string>
    <string name="move_to_shop">Move to Shop</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="description">Deskripsi</string>
    <string name="move_to_activity_recycle">Move to Activity Recycle</string>
    <string-array name="data_name">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">To Profile Activity Page</string>
    <string name="show_dialog">Show a dialog</string>
    <string name="question_coach">Who is the most successfully coach in MU?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Goal</string>
    <string name="david_moyes">David Mores</string>
    <string name="close">Close</string>
    <string name="move_to_fragments_activity">Move to Fragments Activity</string>
    <string name="move_to_navigation_activity">Move to Navigation Activity</string>
    <string name="move_to_appbar_activity">Move to AppBar Activity</string>
    <string name="move_to_searchbar_activity">Move to SearchBar Activity</string>
    <string name="move_to_drawer_activity">Move to Drawer Activity</string>
    <string name="move_to_bottomnav_activity">Move to BottomNav Activity</string>
    <string name="move_to_tablayout_activity">Move to TabLayout Activity</string>
    <string name="move_to_asynchronous_activity">Move to Asynchronous Activity</string>
    <string name="move_to_api_activity">Move to API Activity</string>
    <string name="move_to_ai_chat">Move to F.R.O.S.T AI</string>
    <string name="move_to_api_retrofit">Move to API Retrofit</string>
    <string name="width">Width</string>
    <string name="result">Result</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="move_to_viewmodel_activity">Move to ViewModel Activity</string>
    <string name="hundred">100</string>
    <string name="move_to_livedata_activity">Move to LiveData Activity</string>
    <string name="save">Save</string>
    <string name="volume">Volume</string>
    <string name="circumference">Circumference</string>
    <string name="area">Surface Area</string>
    <string name="name">Name</string>
    <string name="move_to_read_write_activity">Move to Read Write Activity</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="favorite_food">Favorite Food</string>
    <string name="dummy_name">Healme Frost</string>
    <string name="dummy_email">healme@frost.com</string>
    <string name="dummynumber">123456</string>
    <string name="dummyage">30</string>
    <string name="dummyfavfood">Pizza</string>
    <string name="move_to_shared_pref_activity">Move to Shared Pref Activity</string>
    <string name="move_to_settingpref_activity">Move to SettingPref Activity</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="move_to_notes_app">Move to Notes App</string>
    <string name="move_to_room_notes">Move to Room Notes</string>
    <string name="move_to_broadcast_activity">Move to Broadcast Activity</string>
    <string name="move_to_simple_notification">Move to Simple Notification</string>
    <string name="move_to_alarm_manager">Move to Alarm Manager</string>
    <string name="move_to_custom_view">Move to Custom View</string>
    <string name="order_a_cinema_ticket">Order a Cinema Ticket</string>
    <string name="like_or_dislike">Like or Dislike?</string>
    <string name="web_view_dicoding">Web View Dicoding</string>
    <string name="move_to_main_menu">Move to Main Menu</string>
</resources>