<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/appborder"
        android:padding="24dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ivHeaderIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/ldlogowhite" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans"
            android:text="@string/learning_droid"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceDisplaySmall"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary" />

        <EditText
            android:id="@+id/etInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/NumberHint"
            android:autofillHints="@string/nothing"
            android:background="@drawable/bg_textfield_pill"
            android:fontFamily="@font/notosans"
            android:inputType="text"
            android:minHeight="56dp"
            android:paddingHorizontal="24dp"
            android:textColor="@color/white"
            android:textColorHint="?attr/colorOutline" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnToFrostActivity"
            android:backgroundTint="@color/design_default_color_on_secondary"
            style="@style/Widget.LearningDroid.MenuButton"
            android:textStyle="bold"
            android:text="@string/move_to_ai_chat" />

        <Button
            android:id="@+id/btnMoveActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_activity" />

        <Button
            android:id="@+id/btnMoveWithData"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_with_data" />

        <Button
            android:id="@+id/btnMoveWithObject"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_with_object" />

        <Button
            android:id="@+id/btnMoveParcelize"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/kotlinParcelizeTXT" />

        <Button
            android:id="@+id/btnDialNumber"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/dial_number" />

        <Button
            android:id="@+id/btnMoveResult"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_with_result" />

        <Button
            android:id="@+id/btnToScrollActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_shop" />

        <Button
            android:id="@+id/btnToRecycleActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_activity_recycle" />

        <Button
            android:id="@+id/btnToFragmentsActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_fragments_activity" />

        <Button
            android:id="@+id/btnToNavigationActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_navigation_activity" />

        <Button
            android:id="@+id/btnToAppBarActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_appbar_activity" />

        <Button
            android:id="@+id/btnToSearchBarActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_searchbar_activity" />

        <Button
            android:id="@+id/btnToDrawerActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_drawer_activity" />

        <Button
            android:id="@+id/btnToBottomNavActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_bottomnav_activity" />

        <Button
            android:id="@+id/btnTpTabLayoutActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_tablayout_activity" />

        <Button
            android:id="@+id/btnToAsynchronousActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_asynchronous_activity" />

        <Button
            android:id="@+id/btnToAPIActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_api_activity" />

        <Button
            android:id="@+id/btnToRestoReviewActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_api_retrofit" />

        <Button
            android:id="@+id/btnToViewModelActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_viewmodel_activity" />

        <Button
            android:id="@+id/btnToLiveDataActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_livedata_activity" />

        <Button
            android:id="@+id/btnToReadWriteActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_read_write_activity" />

        <Button
            android:id="@+id/btnToSharedPrefActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_shared_pref_activity" />

        <Button
            android:id="@+id/btnToSettingPreferenceActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_settingpref_activity" />

        <Button
            android:id="@+id/btnToNotesApp"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_notes_app" />

        <Button
            android:id="@+id/btnToRoomNotes"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_room_notes" />

        <Button
            android:id="@+id/btnToBradcastActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_broadcast_activity" />

        <Button
            android:id="@+id/btnToSimpleNotifActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_simple_notification" />

        <Button
            android:id="@+id/btnToAlarmManagerActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_alarm_manager" />

        <Button
            android:id="@+id/btnToCustomViewActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/move_to_custom_view" />

        <Button
            android:id="@+id/btnToTicketingActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/order_a_cinema_ticket" />

        <Button
            android:id="@+id/btnToLikesAppActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/like_or_dislike" />

        <Button
            android:id="@+id/btnToWebViewActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:text="@string/web_view_dicoding" />

        <Button
            android:id="@+id/btnToMainMenuActivity"
            style="@style/Widget.LearningDroid.MenuButton"
            android:layout_marginBottom="32dp"
            android:text="@string/move_to_main_menu" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/result_from_activity"
            android:fontFamily="@font/notosans"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorTertiary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>