<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:background="@drawable/appborder" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:layout_margin="20dp"
            android:text="@string/choose_number" />
        <RadioGroup
            android:id="@+id/rg_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/radiodivider"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_50"
                style="@style/CustomRadioButton"
                android:text="@string/_50" />
            <RadioButton
                android:id="@+id/rb_100"
                style="@style/CustomRadioButton"
                android:text="@string/_100" />
            <RadioButton
                android:id="@+id/rb_150"
                style="@style/CustomRadioButton"
                android:text="@string/_150" />
            <RadioButton
                android:id="@+id/rb_200"
                style="@style/CustomRadioButton"
                android:text="@string/_200" />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:text="@string/choose" />
        </RadioGroup>
    </LinearLayout>
    <include layout="@layout/banner_theme" />
</FrameLayout>